# medtrack

./: .commit-template  .env.example  .gitignore  LICENSE  Modelfile  README.md  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
config/: settings.py  urls.py
tracker/: forms.py  helpers.py  services.py  tests.py  urls.py  views.py
tracker/static/tracker/: style.css
tracker/templates/tracker/: base.html  fields_template.html  form_template.html  index.html  medication_lookup.html
