[project]
name = "medtrack"
version = "0.1.0"
description = "Upload a picture of a medication and get the essential information instantly."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "paddleocr>=3.3.2",
    "paddlepaddle==3.2.0",
    "pillow>=12.0.0",
    "requests>=2.32.5",
    "setuptools>=80.9.0",
]

[tool.uv.sources]
paddlepaddle = { index = "paddle" }

[[tool.uv.index]]
name = "paddle"
url = "https://www.paddlepaddle.org.cn/packages/stable/cpu/"
explicit = true

[dependency-groups]
dev = [
    "django-debug-toolbar>=6.1.0",
    "djlint>=1.36.4",
    "python-dotenv>=1.2.1",
    "ruff>=0.14.9",
]
prod = [
    "gunicorn>=23.0.0",
]

# ruff config
[tool.ruff.lint]
extend-select = ["DJ"]
